# actflow

./: .gitignore  Cargo.toml  README.md  build.rs
examples/postgres/: config.toml  main.rs  workflow.json
examples/simple/: main.rs  workflow.json
src/: builder.rs  config.rs  engine.rs  error.rs  lib.rs
src/common/: cache.rs  mod.rs  queue.rs  shutdown.rs  vars.rs
src/dispatcher/: dispatcher.rs
src/engine/: monitor.rs
src/events/: mod.rs  node.rs  workflow.rs
src/model/: edge.rs  mod.rs  node.rs  workflow.rs
src/runtime/: channel.rs  context.rs  mod.rs  process.rs
src/store/: mod.rs  query.rs  store.rs
src/store/data/: event.rs  log.rs  mod.rs  node.rs  proc.rs  workflow.rs
src/store/db/: mod.rs
src/store/db/mem/: collect.rs  mod.rs
src/store/db/mem/impl/: event.rs  log.rs  mod.rs  node.rs  proc.rs  workflow.rs
src/store/db/postgres/: collection.rs  database.rs  mod.rs  synclient.rs
src/store/db/postgres/collection/: event.rs  log.rs  node.rs  proc.rs  workflow.rs
src/utils/: id.rs  mod.rs  time.rs
src/workflow/: consts.rs  edge.rs  mod.rs  node.rs  template.rs  workflow.rs
src/workflow/actions/: end.rs  mod.rs  start.rs
src/workflow/actions/agent/: action.rs  mod.rs
src/workflow/actions/agent/proto/: agent.proto
src/workflow/actions/code/: action.rs  code_executor.rs  mod.rs
src/workflow/actions/http_request/: action.rs  mod.rs  models.rs
src/workflow/actions/if_else/: action.rs  mod.rs  models.rs
