[package]
name = "actflow"
authors = ["Yunis Du <yunis@88.com>"]
license = "MIT"
version = "0.1.2"
description= "A lightweight, event-driven workflow engine written in Rust."
repository = "https://github.com/yunis-du/actflow"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = "0.4"
flume = "0.11.1"
futures = "0.3.31"
globset = { version = "0.4.18", default-features = false }
jsonschema = { version = "0.37", default-features = false }
moka = { version = "0.12.11", features = ["sync"] }
nanoid = "0.4.0"
petgraph = "0.8.3"
prost = "0.14"
prost-types = "0.14"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
rquickjs = "0.10"
rustpython-vm = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1"
toml = "0.9.8"
tonic = "0.14"
tonic-prost = "0.14"
tracing = "0.1.41"
typetag = "0.2.21"
uuid = { version = "1.19", features = ["v4"] }

[build-dependencies]
tonic-prost-build = "0.14"
